* Jan 31 2001 hship

Fix DocBook.mk to change into the HTML directory when running openjade
(otherwise, intra-document links are broken).

* Jan 31 2001 hship

Remove some older SITE_xxx variables, no longer used.
Use the -c option with openjade, instead of setting SGML_CATALOG_FILES variable.

* Jan 31 2001 hship

Check in support for DocBook modules (currently, only works under Cygwin).

* Jan 30 2001 hship

Add Solaris support.  Add sample LocalConfig.mk and SiteConfig.mk.
Rename JDK.Sun_Win32.mk to JDK.Sun_Cygwin.mk.

* Jan 10 2001 hship

Update copyrights.

* Jan 10 2001 hship

Slight touch up, adding tool option variables which will make porting to
non-GNU environments (like Solaris) a bit easier.

* Dec 28 2000 hship

Include the config directory in the distribution, with a README.

* Dec 26 2000 hship

Change definition of JAVADOC_DIR to be the actual directory (i.e., no longer tack
on MODULE_NAME).

* Dec 22 2000 hship

Reorganize the JBE Utils, add the new splice command (used to automatically
edit configuration files).

* Dec 22 2000 hship

Reorganize to support multiple JDK releases and vendors.

* Dec 20 2000 hship

Always remove package.html from the list of package resources.

* Dec 19 2000 hship

More tweaking to get things just right.

* Dec 15 2000 hship

Lots of cleanups and improvements.  Simplified, reorganized and made things work
properly with GNU Make 3.79.

* Dec 11 2000 hship

More cleanups and improvements; support some additional user-define pre- and post-
targets.
Simplify the rules for compiling the JBE utility; extend it to support compiling
any additional Java files in the directory.

* Dec 11 2000 hship

Make use of the Make $(call) function to simplify/improve the makefiles.

* Nov 20 2000 hship

More changes to the JBE to support Solaris.  Solaris doesn't always use GNU tools, so we
need to use the short versions of many command line parameters.

* Nov 20 2000 hship

Release 0.2.6

* Nov 16 2000 hship
